Add download link and improve styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 <body>
   <header>
     <span id="title">Gabdown Preview</span>
-    <button id="fullscreen-button">Toggle Fullscreen</button>
+    <div id="button-container">
+      <a id="download-link" download="index.gd">Download</a>
+      <!-- <button id="upload-button">Upload</button> -->
+      <button id="fullscreen-button">Toggle Fullscreen</button>
+    </div>
   </header>
   <textarea id="code"></textarea>
   <div id="content"></div>
